--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
 
     defaultConfig {
         applicationId "mau.resturantapp"
+        vectorDrawables.useSupportLibrary = true
         minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
@@ -23,4 +24,15 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile "com.android.support:design:24.2.1"
+    compile "com.android.support:percent:24.2.1"
+    compile "com.android.support:support-vector-drawable:24.2.1"
+    compile "com.android.support:animated-vector-drawable:24.2.1"
+    compile "com.android.support:transition:24.2.1"
+    compile "com.android.support:support-annotations:24.2.1"
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+
 }
