--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 22 16:29:19 CEST 2016
-sdk.dir=C\:\\Niclas\\Android\\sdk
+#Sat Oct 01 12:04:42 CEST 2016
+sdk.dir=/home/anwar/Android/Sdk
