--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     compile "com.android.support:transition:24.2.1"
     compile "com.android.support:support-annotations:24.2.1"
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.google.firebase:firebase-core:9.6.1'
+    compile 'com.firebaseui:firebase-ui:0.6.1'
 
 
 }
+
+apply plugin: 'com.google.gms.google-services'
