--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,7 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.google.firebase:firebase-core:9.6.1'
     compile 'com.firebaseui:firebase-ui:0.6.1'
-
-
+    compile 'com.google.android.gms:play-services-maps:9.6.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
