--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.6.1'
     compile 'com.firebaseui:firebase-ui:0.6.1'
     compile 'com.google.android.gms:play-services-maps:9.6.1'
+    compile 'me.dm7.barcodescanner:zxing:1.8.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
