--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 01 12:04:42 CEST 2016
-sdk.dir=/home/anwar/Android/Sdk
+#Mon Oct 24 17:30:07 CEST 2016
+sdk.dir=C\:\\Niclas\\Android\\sdk
