--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 12 18:33:08 CET 2016
-sdk.dir=/Users/AnwarC/Library/Android/sdk
+#Sun Dec 04 21:07:00 CET 2016
+sdk.dir=D\:\\Android\\sdk
