--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:9.6.1'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
     compile 'com.roughike:bottom-bar:2.0.2'
+    compile 'com.jjoe64:graphview:4.2.1'
+
 
     compile 'org.jetbrains:annotations-java5:15.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
