--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     compile 'org.jetbrains:annotations-java5:15.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.google.firebase:firebase-messaging:9.6.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
